# tenbox

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: build-initramfs.yml  build-rootfs.yml
installer/: TenBox.wxs
scripts/: build-macos.sh  build-msi.bat  convert_icons.py  make-dmg-background.py  make-dmg-styled.py  make-dmg.sh  make-rootfs-base.sh  make-rootfs-copaw.sh  make-rootfs-openclaw.sh
scripts/arm64/: make-initramfs.sh  make-rootfs-openclaw.sh
scripts/ci/: update_images_json.py  upload_to_oss.py
scripts/x86_64/: make-initramfs.sh  make-rootfs-openclaw.sh
src/common/: vm_model.h
src/core/arch/x86_64/: acpi.cpp
src/core/device/acpi/: acpi_pm.cpp  acpi_pm.h
src/core/device/rtc/: cmos_rtc.cpp
src/core/device/timer/: i8254_pit.cpp  i8254_pit.h
src/core/net/: net_backend.cpp  net_backend.h  net_nat.cpp  net_port_forward.cpp  poll_handle.h
src/core/vmm/: vm.cpp
src/hypervisor/: whvp_vm.cpp
src/manager/: CMakeLists.txt  app_settings.cpp  app_settings.h  i18n.cpp  i18n.h  image_source.cpp  image_source.h  llm_proxy.cpp  llm_proxy.h  main.cpp  manager_service.cpp  manager_service.h  resource.h  toolbar.rc
src/manager-macos/: Package.swift  TenBoxApp.swift
src/manager-macos/Audio/: CoreAudioPlayer.swift
src/manager-macos/Bridge/: IpcClientWrapper.swift  Models.swift  TenBoxBridgeWrapper.swift
src/manager-macos/Bridge/Sources/: TenBoxBridge.mm  TenBoxIPC.mm
src/manager-macos/Bridge/include/: TenBoxBridge.h  TenBoxIPC.h
src/manager-macos/Clipboard/: ClipboardHandler.swift
src/manager-macos/Resources/: Info.plist
src/manager-macos/Services/: LlmProxyService.swift
src/manager-macos/Views/: ContentView.swift  CreateVmDialog.swift  DisplayView.swift  InfoView.swift  LlmProxyView.swift  VmDetailView.swift
src/manager/ui/: console_tab.cpp  console_tab.h  create_vm_dialog.cpp  dlg_builder.h  edit_vm_dialog.cpp  info_tab.cpp  info_tab.h  llm_proxy_dialog.cpp  port_forward_dialog.cpp  settings_dialog.cpp  settings_dialog.h  vm_listview.cpp  vm_listview.h  win32_display_panel.cpp  win32_display_panel.h  win32_ui_shell.cpp
src/platform/windows/: vm_platform_win.cpp
src/runtime/: main.cpp  runtime_service.cpp
src/ui/common/: i18n.cpp
website/public/api/: appcast.xml  images.json  version.json
website/src/components/: FooterSection.vue  HeroSection.vue
website/src/i18n/: en-US.json  zh-CN.json
